launcher/assets/css/styles.css
/* ==========================================================================
   LAUNCHER SCREEN STYLES
   ========================================================================== */





/* Icons Font Definition
========================================================================== */

@font-face {
  font-family: 'icomoon';
  src:  url('../fonts/icomoon.eot?p7zj49');
  src:  url('../fonts/icomoon.eot?p7zj49#iefix') format('embedded-opentype'),
    url('../fonts/icomoon.ttf?p7zj49') format('truetype'),
    url('../fonts/icomoon.woff?p7zj49') format('woff'),
    url('../fonts/icomoon.svg?p7zj49#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  color: white;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-configuration:before {
  content: "\e907";
}
.icon-appstore:before {
  content: "\e900";
}
.icon-gplay:before {
  content: "\e901";
}
.icon-laboratory:before {
  content: "\e902";
}
.icon-modulab:before {
  content: "\e903";
}
.icon-plus:before {
  content: "\e904";
}
.icon-tubes:before {
  content: "\e905";
}
.icon-werfen:before {
  content: "\e906";
}

body {
  background: url('../img/launcher-bg.jpg') center center no-repeat;
  background-size: cover;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  overflow: hidden;
}

.slab-launcher {
  background: linear-gradient(0deg, rgba(0, 130, 240, 0.9) 0%, rgba(149, 222, 220, 0.9) 100%);
}

.slab-launcher__header {
  height: 90px;
}

@media screen and (min-height: 950px) {
  .slab-launcher__header {
    height: 110px;
    margin-bottom: 0;
  }
}

.slab-launcher__main {
  flex-direction: column;
}

@media screen and (min-height: 950px) {
  .slab-launcher__main {
    flex-direction: row;
  }
}


/* Language menu
========================================================================== */

.slab-languages__item {
  padding-top: 2.7rem;
  padding-bottom: 0.5em;
  font-size: 0.7rem;
  opacity: 0.5;
  cursor: pointer;
}

.slab-languages__item,
.slab-languages__item:hover {
  border-top: solid 4px transparent;
  color: white;
  text-decoration: none;
}

.slab-languages__item:hover {
  opacity: 1;
}

.slab-languages__item--active {
  border-top: solid 4px white !important;
  opacity: 1;
}





/* Main content
========================================================================== */

.slab-launcher__title {
  font-size: 2.4rem;
}

@media screen and (min-height: 950px) {
  .slab-launcher__title {
    font-size: 3rem;
  }
}

.slab-launcher__description {
  font-size: 1rem;
  line-height: 2rem;
  max-width: 1000px;
  margin: 0 auto;
}

@media screen and (min-height: 950px) {
  .slab-launcher__description {
    font-size: 1.3rem;
    line-height: 2.6rem;
    margin: 3rem 0;
  }
}

@media screen and (min-height: 950px) {
  .slab-launcher__content {
    width: 75%;
  }
}

.slab-icon {
  border: solid 2px white;
}


  /* Icon modifiers
  ========================================================================== */

  .slab-icon--squared {
    width: 75px;
    height: 75px;
  }
  
  @media screen and (min-width: 950px) {
    .slab-icon--squared {
      width: 100px;
      height: 100px;
    }
  }

  .slab-icon--rounded {
    border-radius: 25px;
  }

  @media screen and (min-width: 950px) {
    .slab-icon--rounded {
      border-radius: 34px;
    }
  }

  .slab-icon--small {
    font-size: 23px;
  }

  .slab-icon--medium {
    font-size: 48px;
  }

  .slab-icon--large {
    font-size: 55px;
  }

  .slab-icon--xlarge {
    font-size: 70px;
  }

.slab-link {
  color: white;
}

.slab-link:hover {
  text-decoration: none;
  color: white;
}

.slab-link:hover .slab-icon {
  background: white;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.3);
}

.slab-link:hover .slab-icon--primary:before {
  color: #0082F0;
}

.slab-link:hover .slab-menu__title {
  text-shadow: 5px 5px 15px rgba(0,0,0,0.3);
}





/* Footer
========================================================================== */ 


.slab-launcher__footer {
  height: 35px;
}

@media screen and (min-width: 550px) {
  .slab-launcher__footer {
    height: 120px;
  }
}

.slab-copyright-text {
  font-size: 0.8rem;
}

